--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "path-browserify": "^1.0.1",
+    "plyr": "^3.8.3",
     "plyr-react": "^5.1.2",
     "preview-office-docs": "^1.0.2",
     "react": "^18.2.0",
@@ -56,7 +57,6 @@
     "wrangler": "^3.105.0"
   },
   "devDependencies": {
-    "vercel": "39.1.1",
     "@cloudflare/next-on-pages": "^1.6.3",
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.0.2",
@@ -74,7 +74,8 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "vercel": "39.1.1"
   },
   "overrides": {
     "vercel": "$vercel"
